--- a/MappingInR/DESCRIPTION
+++ b/MappingInR/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: MappingInR
-Title: What the Package Does (One Line, Title Case)
+Title: What the Package Does (Mapping in RStudio tutorial)
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+    person("Mariah", "Caballero", , "first.last@example.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+Description: This package provides an introductory tutorial to mapping in RStudio.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
